added autogenerated files

--- a/ThinkingInCWebApp/.gitignore
+++ b/ThinkingInCWebApp/.gitignore
@@ -69,7 +69,7 @@ typings/
 .nuxt
 
 # Nuxt generate
-dist
+# dist
 
 # vuepress build output
 .vuepress/dist
@@ -88,3 +88,5 @@ sw.*
 
 # Vim swap files
 *.swp
+
+.vscode
